# parmigiano-tcp

./: .env.example  .gitignore  AppClient.vcxproj  AppClient.vcxproj.filters  CMakeLists.txt  ClientRequestStruct.proto  Config.txt  README.md  RequestStruct.proto  ResponseStruct.proto  serverAutoUpdate.vcxproj  serverAutoUpdate.vcxproj.filters
.github/workflows/: ci.yml  release.yml
.systemd/: server_tcp.service
include/: ClientRequestStruct.pb.cc  ClientRequestStruct.pb.h  ConnectionManager.h  ResponseStruct.pb.cc  ResponseStruct.pb.h  SecureModule.h  acceptingResponses.h  autoUpdate.h  base.h  chatMembers.h  clientInfoCheck.h  clientShutdown.h  collectClientInfo.h  config.h  connect.h  connection.h  connectionHandler.h  customLists.h  database.h  forcedClientShutdown.h  logger.h  main.h  messages.h  preparedStatementManager.h  processingFile.h  requestProcessing.h  responseProcessing.h  scheduler.h  sendResponse.h  sendingRequests.h  serialization.h  session.h  sessionLive.h  sessionManager.h  tcpServer.h  userActives.h  userStatusNotify.h  usersQueue.h
include/connect_processing/: clientContextStruct.h  clientInfoCheck.h  clientShutdown.h  disconnectTypeEnum.h  requestProcessing.h  responseTypeEnum.h  secureModule.h  sendResponse.h  userStatusService.h
include/connect_processing/user_actions/: userActionBase.h  userDeleteMessage.h  userEditMessage.h  userPinMessage.h  userReadMessage.h  userSendMessage.h  userTyping.h
include/database/: database.h  preparedStatementManager.h
include/database/tables/: baseTable.h  chatMembersTable.h  chatsTable.h  messageEditsTable.h  messageStatusesTable.h  messagesTable.h  userActivesTable.h
include/session/: session.h  sessionLive.h  sessionManager.h  tcpServer.h  usersQueue.h
protoStructs/: ClientRequestStruct.proto  ResponseStruct.proto
proto_structs/: ClientRequestStruct.proto  ResponseStruct.proto
scripts/: pre-deploy  systemd
src/: ConnectionManager.cpp  SecureModule.cpp  acceptingResponses.cpp  autoUpdate.cpp  base.cpp  chatMembers.cpp  clientInfoCheck.cpp  clientShutdown.cpp  collectClientInfo.cpp  config.cpp  connect.cpp  connection.cpp  connectionHandler.cpp  customLists.cpp  database.cpp  forcedClientShutdown.cpp  logger.cpp  main.cpp  messages.cpp  preparedStatementManager.cpp  processingFile.cpp  requestProcessing.cpp  responseProcessing.cpp  scheduler.cpp  sendResponse.cpp  sendingRequests.cpp  serialization.cpp  session.cpp  sessionLive.cpp  sessionManager.cpp  tcpServer.cpp  userActives.cpp  userStatusNotify.cpp  usersQueue.cpp
src/connect_processing/: clientInfoCheck.cpp  clientShutdown.cpp  requestProcessing.cpp  secureModule.cpp  sendResponse.cpp  userStatusService.cpp
src/connect_processing/user_actions/: userActionsBase.cpp  userDeleteMessage.cpp  userEditMessage.cpp  userPinMessage.cpp  userReadMessage.cpp  userSendMessage.cpp  userTyping.cpp
src/database/: baseTable.cpp  chatMembersTable.cpp  database.cpp  messagesTable.cpp  preparedStatementManager.cpp  userActives.cpp
src/database/tables/: baseTable.cpp  chatMembersTable.cpp  chatsTable.cpp  messageEditsTable.cpp  messageStatusesTable.cpp  messagesTable.cpp  userActivesTable.cpp
src/session/: session.cpp  sessionLive.cpp  sessionManager.cpp  tcpServer.cpp  usersQueue.cpp
